<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Hackerspace Bremen Android App - An Open-Space-Notifier for Android
   
   Copyright (C) 2012 Steve Liedtke <sliedtke57@gmail.com>

   This program is free software; you can redistribute it and/or modify it under the terms of the
   GNU General Public License as published by the Free Software Foundation; either version 3 of
   the License, or (at your option) any later version.

   This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY
   without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See 
   the GNU General Public License for more details.

   You can find a copy of the GNU General Public License on http://www.gnu.org/licenses/gpl.html.

   Contributors:
       Steve Liedtke <sliedtke57@gmail.com>
       Matthias Friedrich <mtthsfrdrch@gmail.com>
-->
<resources>
	<string name="app_name">Hackerspace Bremen</string>
	<string name="fetch_status">The status of the space is currently being called.</string>
	<string name="fetch_message">The status message of the space is currently being fetched.</string>
	<string name="space_open">The space is open since %1$s.</string>
	<string name="space_open_simple">Space is open!</string>
	<string name="space_closed">The space is closed since %1$s!</string>
	<string name="space_closed_simple">Space was closed!</string>
	<string name="space_unknown">The current status of the space is unknown.</string>
	<string name="unknown">unknown</string>
	<string name="notifications">Notifications</string>
	<string name="notification_status">Allow Notifications</string>
	<string name="settings">Settings</string>
	<string name="vibrate_enable">Enable Vibration</string>
	<string name="permanent_notification_enable">Enable permanent notification</string>
	<string name="permanent_notification_description">Shows the notification permanently if the space is open!</string>
	<string name="status_message">Status message:</string>
	<string name="data_error">Could not retrieve data!"</string>
	<string name="content_descr_conn_error">Image shown incase an connection error occurred</string>
	<string name="content_descr_loading">Image shown when the app is waiting for data</string>
	<string name="connection_error">The connection to the server wasn\'t established! Reload or connect to the internet.</string>
	<string name="change_text">Only members of the Hackerspace Bremen can change the status of the space.</string>
	<string name="login_label">Login:</string>
	<string name="password_label">Password:</string>
	<string name="message_label">Message:</string>
	<string name="abort">Cancel</string>
	<string name="send">Send</string>
	<string name="change">Close/open space</string>
	<string name="change_waiting">Waiting for answer from server. Please wait&#8230;</string>
	<string name="change_success">The space status was successfully changed!</string>
	<string name="change_ok">Great</string>
	<string name="change_error_damn">Damn</string>
	<string name="change_error">An unknown error occurred! Please try later</string>
	<string name="change_error_0">The connection to the server wasn\'t established! Try again or connect to the internet.</string>
	<string name="change_error_1">Either you typed your login wrong or you don\'t have permission to open/close the space. </string>
	<string name="change_error_3">The space was already opened!</string>
	<string name="change_error_4">The space was already closed!</string>
	<string name="close_space">Close</string>
	<string name="open_space">Open</string>
	<string name="about">About</string>
	<string name="refresh">Refresh</string> 
	<string name="validate_login">The login must be at least 4 characters long</string>
	<string name="validate_pwd">The password must be at least 4 characters long</string>
	<string name="about_icon">The logo displayed in the Google Play Store</string>
	<string name="about_text">This app was created for the Hackerspace Bremen e.V which is based in Germany. The app was developed by Steve Liedtke. The source code can be found on Github: https://github.com/HackerspaceBremen/hshb_notifier_android</string>
	<string name="about_version">Version:</string>
	<string name="about_title">Hackerspace Bremen Android App</string>
	<string name="save_login">Remember login data?</string>
	<string name="map">Location</string>
	<string name="news">News</string>
	<string name="intent_service_class">de.hackerspacebremen.push.IntentService</string>
	
	<!-- DashClockWidget -->
	<string name="extension_title">Hackerspace Bremen Widget</string>
    <string name="extension_description">Displays the status of the space in Bremen(Germany).</string>
    <string name="title_settings">Widget Settings</string>
</resources>