<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Hackerspace Bremen Android App - An Open-Space-Notifier for Android
   
   Copyright (C) 2012 Steve Liedtke <sliedtke57@gmail.com>

   This program is free software; you can redistribute it and/or modify it under the terms of the
   GNU General Public License as published by the Free Software Foundation; either version 3 of
   the License, or (at your option) any later version.

   This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY
   without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See 
   the GNU General Public License for more details.

   You can find a copy of the GNU General Public License on http://www.gnu.org/licenses/gpl.html.

   Contributors:
       Steve Liedtke <sliedtke57@gmail.com>
-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
        
    <PreferenceCategory
            android:title="@string/notifications">

        <CheckBoxPreference
                android:key="notification_preference"
                android:title="@string/notification_status"
                android:defaultValue="true"
        />
        <CheckBoxPreference
                android:key="vibration_preference"
                android:title="@string/vibrate_enable"
                android:defaultValue="true"
        />
        <CheckBoxPreference
                android:key="permanent_notification_preference"
                android:title="@string/permanent_notification_enable"
                android:summary="@string/permanent_notification_description"
                android:defaultValue="false"
        />

    </PreferenceCategory>
    
</PreferenceScreen>